// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Assets /> should render empty properly 1`] = `
.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  margin-bottom: -2px;
  box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.6);
}

.emotion-2 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
  text-align: center;
}

.emotion-3 {
  padding-top: 16px;
  font-size: 32px;
  line-height: 43px;
}

.emotion-4 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  color: #b3b3b3;
}

.emotion-5 {
  height: 24px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-7,
.emotion-7:hover,
.emotion-7:visited,
.emotion-7 .noop {
  background-color: #3A5DFF;
}

.emotion-7:hover,
.emotion-7 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-7[aria-disabled=true],
.emotion-7 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-8 {
  width: 24px;
}

<div
  className="emotion-0"
>
  <VisualizerNavigation />
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <svg
        color="#808080"
        data-file-name="noAssets.svg"
        width={168}
      />
      <h2
        className="emotion-3"
      >
        There are no assets in the system yet. 
      </h2>
      <h3
        className="emotion-4"
      >
        Assets can be added via the data source and the progress monitored in the job queue.
      </h3>
      <div
        className="emotion-5"
      />
      <div
        className="emotion-6"
      >
        <a
          className="emotion-7"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Create a Data Source
        </a>
        <div
          className="emotion-8"
        />
        <a
          className="emotion-7"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View Job Queue
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Assets /> should render empty with filter properly 1`] = `
.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  margin-bottom: -2px;
  box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.6);
}

.emotion-2 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
  text-align: center;
}

.emotion-3 {
  padding-top: 16px;
  font-size: 32px;
  line-height: 43px;
}

.emotion-4 {
  height: 24px;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-5,
.emotion-5:hover,
.emotion-5:visited,
.emotion-5 .noop {
  background-color: #3A5DFF;
}

.emotion-5:hover,
.emotion-5 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-5[aria-disabled=true],
.emotion-5 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div
  className="emotion-0"
>
  <VisualizerNavigation />
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <svg
        color="#808080"
        data-file-name="noAssets.svg"
        width={168}
      />
      <h2
        className="emotion-3"
      >
        All assets have been filtered out.
      </h2>
      <div
        className="emotion-4"
      />
      <button
        className="emotion-5"
        onClick={[Function]}
        type="button"
      >
        Clear All Filters
      </button>
    </div>
  </div>
</div>
`;

exports[`<Assets /> should render empty with no filters properly 1`] = `
.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  margin-bottom: -2px;
  box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.6);
}

.emotion-2 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
  text-align: center;
}

.emotion-3 {
  padding-top: 16px;
  font-size: 32px;
  line-height: 43px;
}

.emotion-4 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  color: #b3b3b3;
}

.emotion-5 {
  height: 24px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-7,
.emotion-7:hover,
.emotion-7:visited,
.emotion-7 .noop {
  background-color: #3A5DFF;
}

.emotion-7:hover,
.emotion-7 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-7[aria-disabled=true],
.emotion-7 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-8 {
  width: 24px;
}

<div
  className="emotion-0"
>
  <VisualizerNavigation />
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <svg
        color="#808080"
        data-file-name="noAssets.svg"
        width={168}
      />
      <h2
        className="emotion-3"
      >
        There are no assets in the system yet. 
      </h2>
      <h3
        className="emotion-4"
      >
        Assets can be added via the data source and the progress monitored in the job queue.
      </h3>
      <div
        className="emotion-5"
      />
      <div
        className="emotion-6"
      >
        <a
          className="emotion-7"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Create a Data Source
        </a>
        <div
          className="emotion-8"
        />
        <a
          className="emotion-7"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View Job Queue
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Assets /> should render properly 1`] = `
.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  margin-bottom: -2px;
  box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.6);
}

.emotion-2 {
  position: absolute;
  bottom: 16px;
  right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #4a4a4a;
  border-radius: 2px;
  background-color: #252525;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  z-index: 10;
  opacity: 0.8;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  opacity: 1;
}

.emotion-3:hover {
  color: #3A5DFF;
}

.emotion-3[aria-disabled=true] {
  color: #808080;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  opacity: 1;
}

.emotion-4:hover {
  color: #3A5DFF;
}

.emotion-4[aria-disabled=true] {
  color: #808080;
}

<div
  className="emotion-0"
>
  <VisualizerNavigation />
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "height": 0,
          "overflow": "visible",
          "width": 0,
        }
      }
    />
    <div
      className="emotion-2"
    >
      <button
        aria-disabled={true}
        aria-label="Zoom Out"
        className="emotion-3"
        onClick={[Function]}
        type="button"
      >
        <svg
          data-file-name="circleMinus.svg"
          height={20}
        />
      </button>
      <button
        aria-label="Zoom In"
        className="emotion-4"
        onClick={[Function]}
        type="button"
      >
        <svg
          data-file-name="circlePlus.svg"
          height={20}
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Assets /> should render properly 2`] = `
.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  margin-bottom: -2px;
  box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.6);
}

.emotion-2 {
  position: absolute;
  bottom: 16px;
  right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #4a4a4a;
  border-radius: 2px;
  background-color: #252525;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  z-index: 10;
  opacity: 0.8;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  opacity: 1;
}

.emotion-3:hover {
  color: #3A5DFF;
}

.emotion-3[aria-disabled=true] {
  color: #808080;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  opacity: 1;
}

.emotion-4:hover {
  color: #3A5DFF;
}

.emotion-4[aria-disabled=true] {
  color: #808080;
}

<div
  className="emotion-0"
>
  <VisualizerNavigation />
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "height": 0,
          "overflow": "visible",
          "width": 0,
        }
      }
    />
    <div
      className="emotion-2"
    >
      <button
        aria-label="Zoom Out"
        className="emotion-3"
        onClick={[Function]}
        type="button"
      >
        <svg
          data-file-name="circleMinus.svg"
          height={20}
        />
      </button>
      <button
        aria-disabled={true}
        aria-label="Zoom In"
        className="emotion-4"
        onClick={[Function]}
        type="button"
      >
        <svg
          data-file-name="circlePlus.svg"
          height={20}
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Assets /> should render properly 3`] = `
.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  margin-bottom: -2px;
  box-shadow: inset 0 0 4px 0 rgba(0, 0, 0, 0.6);
}

.emotion-2 {
  position: absolute;
  bottom: 16px;
  right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #4a4a4a;
  border-radius: 2px;
  background-color: #252525;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  z-index: 10;
  opacity: 0.8;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  opacity: 1;
}

.emotion-3:hover {
  color: #3A5DFF;
}

.emotion-3[aria-disabled=true] {
  color: #808080;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  opacity: 1;
}

.emotion-4:hover {
  color: #3A5DFF;
}

.emotion-4[aria-disabled=true] {
  color: #808080;
}

<div
  className="emotion-0"
>
  <VisualizerNavigation />
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "height": 0,
          "overflow": "visible",
          "width": 0,
        }
      }
    />
    <div
      className="emotion-2"
    >
      <button
        aria-disabled={true}
        aria-label="Zoom Out"
        className="emotion-3"
        onClick={[Function]}
        type="button"
      >
        <svg
          data-file-name="circleMinus.svg"
          height={20}
        />
      </button>
      <button
        aria-label="Zoom In"
        className="emotion-4"
        onClick={[Function]}
        type="button"
      >
        <svg
          data-file-name="circlePlus.svg"
          height={20}
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Assets /> should render properly while loading 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 8px;
  margin-bottom: 0;
}

.emotion-2 {
  min-height: 300px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  background-color: #252525;
  font-size: 15px;
  line-height: 19px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  height: 100%;
}

.emotion-3 {
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
  margin-right: 16px;
}

<div
  className="emotion-0"
>
  <VisualizerNavigation />
  <div
    className="emotion-1"
  >
    <div
      className="Loading emotion-2"
    >
      <svg
        className="emotion-3"
        data-file-name="generating.svg"
        height={20}
      />
      Loading...
    </div>
  </div>
</div>
`;
